--- a/index.html/20220819安岡.html
+++ b/index.html/20220819安岡.html
@@ -1,4 +1,24 @@
+<!DOCTYPE html>
+<html lang="ja">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+
+<body>
+
+</body>
+
+</html>
+
+
+
+
 <link rel="stylesheet" href="css/20220819安岡.css" />
+
 
 
 
@@ -6,31 +26,44 @@
 
 <div class="site">
 
-  <h1 class="title">COACHTECH</h1>
 
-  <div class="nav">
+  <header>
 
-    <ul>
-      <li>ホーム</li>
-      <li>事業内容</li>
-      <li>採用情報</li>
-      <li>お問い合わせ</li>
-    </ul>
+    <div class="flex">
 
-  </div>
+      <h1 class="title">COACHTECH</h1>
+
+
+      <div class="nav">
+
+        <ul>
+          <li>ホーム</li>
+          <li>事業内容</li>
+          <li>採用情報</li>
+          <li>お問い合わせ</li>
+        </ul>
+
+      </div>
+
+
+    </div>
+
+
+
+  </header>
 
   <div class="parent">
-    <p  class="text">毎日を笑顔に
-    </p> 
+    <p class="text">毎日を笑顔に
+    </p>
   </div>
 
 
   <div class="relative">
     <img src="img/firstview.jpeg" alt="">]
 
- <p class="absolute">
-   <div class="box"></div>
- </p>
+    <p class="absolute">
+    <div class="box"></div>
+    </p>
 
   </div>
 
@@ -38,7 +71,7 @@
 
 
 
-  
+
 
 
 
