--- a/index.html/20220819安岡.html
+++ b/index.html/20220819安岡.html
@@ -14,15 +14,7 @@
 
 </html>
 
-
-
-
 <link rel="stylesheet" href="css/20220819安岡.css" />
-
-
-
-
-
 
 <div class="site">
 
@@ -45,34 +37,24 @@
 
       </div>
 
-
     </div>
-
-
 
   </header>
 
   <div class="parent">
+
     <p class="text">毎日を笑顔に
     </p>
   </div>
 
 
   <div class="relative">
-    <img src="img/firstview.jpeg" alt="">]
+    <img src="img/firstview.jpeg" alt="">
 
     <p class="absolute">
     <div class="box"></div>
     </p>
 
   </div>
-
-
-
-
-
-
-
-
 
 </div>
