--- a/index.html/20220819安岡.html
+++ b/index.html/20220819安岡.html
@@ -41,18 +41,19 @@
 
   </header>
 
-  <div class="parent">
-
-    <p class="text">毎日を笑顔に
-    </p>
-  </div>
+  
 
 
-  <div class="relative">
+  <div class="absolute">
     <img src="img/firstview.jpeg" alt="">
 
-    <p class="absolute">
+    <p class="relative">
     <div class="box"></div>
+    </p>
+
+
+   <p class="absolute">
+    <div class="text">毎日を笑顔に</div>
     </p>
 
   </div>
