--- a/index.html/20220819安岡.html
+++ b/index.html/20220819安岡.html
@@ -16,6 +16,9 @@
 
 <link rel="stylesheet" href="css/20220819安岡.css" />
 
+
+<link rel="stylesheet" href="css/reset.css" />
+
 <div class="site">
 
 
@@ -41,7 +44,7 @@
 
   </header>
 
-  
+
 
 
   <div class="absolute">
@@ -52,7 +55,7 @@
     </p>
 
 
-   <p class="absolute">
+    <p class="absolute">
     <div class="text">毎日を笑顔に</div>
     </p>
 
